# flaskAIStarGTP

flaskAIStargpt-master/: app.py  desktop.ini  package-lock.json  pyproject.toml  requirements.txt
flaskAIStargpt-master/static/src/css/: input.css
flaskAIStargpt-master/templates/: index.html
